# search_aggregator

./: .editorconfig  Cargo.toml  README.md
src/: api.rs  main.rs  meta.rs  search.rs
templates/: search.html
