[package]
name = "search"
version = "0.1.0"
authors = ["Simon Prykhodko <semion.ababo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1"
actix-session = "0.3.0"
actix-web = { version = "2", features = ["openssl"] }
awc = { version = "1.0.1", features = ["openssl"] }
futures = "0.3.4"
html5ever = "*"
serde = "1.0.104"
