[package]
name = "search"
version = "0.1.0"
authors = ["Simon Prykhodko <semion.ababo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1"
actix-web = { version = "2", features = ["openssl"] }
askama = "0.8"
awc = { version = "1.0.1", features = ["openssl"] }
env_logger = "0.7.1"
futures = "0.3.4"
html5ever = "*"
log = "0.4.8"
rake = "0.2.0"
serde = "1.0.104"
streaming-stats = "0.2.3"
strsim = "0.10.0"
url = "2.1.1"
